--- a/package.json
+++ b/package.json
@@ -20,9 +20,6 @@
     "*.{css,scss,sass,html,vue}": "stylelint",
     "*.**": "prettier --check --ignore-unknown"
   },
-  "resolutions": {
-    "deasync": "0.1.16"
-  },
   "dependencies": {
     "@nuxt/content": "^1.15.1",
     "@nuxtjs/axios": "^5.13.6",
@@ -41,7 +38,9 @@
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.1.0",
+    "@vue/cli-plugin-unit-jest": "^5.0.0-rc.1",
     "@vue/test-utils": "^1.3.0",
+    "@vue/vue2-jest": "^27.0.0-alpha.4",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
     "eslint": "^8.4.1",
@@ -49,7 +48,7 @@
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
     "husky": "^7.0.4",
-    "jest": "^27.4.4",
+    "jest": "^27.4.5",
     "lint-staged": "^12.1.2",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
